--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<!-- CSS -->
+	<link rel="stylesheet" href="style.css"> 
+
+	<!-- FONT -->
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Playfair+Display&display=swap" rel="stylesheet">
+
+	<title>My "First" Website</title>
+</head>
+
+<body>
+	<header>
+		<nav>
+			<ul>
+
+			</ul>
+		</nav>
+	</header>
+
+	<h1><span>Hi !</span></h1>
+	<p> My name is Kanel Landres, I'm 22 and learning how to code. I was inspired by Jennifer Dewalt to challenge myself to build <strong>website a day for 100 days!</strong>
+	This will be my first website without following a tutorial and the homepage leading to all the other websites.
+	</p> 
+	<ul id="days">
+		<li><a href="index.html"> Day 1: The Front Page</a></li>
+	</ul>
+	<footer>
+		<nav>
+			<ul>
+
+			</ul>
+		</nav>
+	</footer>
+</body>
+</html>
