--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	</p> 
 	<ul id="days">
 		<li><a href="index.html"> Day 1: The Front Page</a></li>
+		<li><a href="https://k-nel.github.io/quiz.github.io/"> Day 2: Personality Quiz</a></li>
 	</ul>
 	<footer>
 		<nav>
