Add link to day three

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<ul id="days">
 		<li><a href="index.html"> Day 1: The Front Page</a></li>
 		<li><a href="https://k-nel.github.io/quiz.github.io/"> Day 2: Personality Quiz</a></li>
+		<li><a href="https://k-nel.github.io/478-breath/.">Day 3: Breathe with me</a></li>
 	</ul>
 	<footer>
 		<nav>
