--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<li><a href="index.html"> Day 1: The Front Page</a></li>
 		<li><a href="https://k-nel.github.io/quiz.github.io/"> Day 2: Personality Quiz</a></li>
 		<li><a href="https://k-nel.github.io/478-breath/.">Day 3: Breathe with me</a></li>
+		<li><a href="https://k-nel.github.io/clock.github.io/">Day 4 : Let's make some music !</a></li>
+		<li><a href="https://k-nel.github.io/actualclock.github.io/">Day 5 : Time zone</a></li>
+
 	</ul>
 	<footer>
 		<nav>
