Add icon buttons

--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 
 <body>
 	<header>
-		<nav>
-			<ul>
-
-			</ul>
-		</nav>
+		
 	</header>
 
 	<h1><span>Hi !</span></h1>
+	<nav>
+			<ul id="nav">
+				<!--tumblr icon <a href='https://dryicons.com/icon/circle-tumblr-icon-8375'> Icon by Dryicons </a>-->
+				<!-- git icon <a href='https://dryicons.com/free-icons/github'> Icon by Dryicons </a>-->
+				<li><a href="https://github.com/k-nel" target="_blank"><img src="github.svg" ></a></li>
+				<li><a href="https://k-nel-code.tumblr.com/" target="_blank"><img src="tumblr.svg"></a></li>
+
+			</ul>
+		</nav>
 	<p> My name is Kanel Landres, I'm 22 and learning how to code. I was inspired by Jennifer Dewalt to challenge myself to build <strong>website a day for 100 days!</strong>
 	This will be my first website without following a tutorial and the homepage leading to all the other websites.
 	</p> 
