Add day six to ten

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
 		<li><a href="index.html"> Day 1: The Front Page</a></li>
 		<li><a href="https://k-nel.github.io/quiz.github.io/"> Day 2: Personality Quiz</a></li>
 		<li><a href="https://k-nel.github.io/478-breath/.">Day 3: Breathe with me</a></li>
-		<li><a href="https://k-nel.github.io/clock.github.io/">Day 4 : Let's make some music !</a></li>
-		<li><a href="https://k-nel.github.io/actualclock.github.io/">Day 5 : Time zone</a></li>
+		<li><a href="https://k-nel.github.io/clock.github.io/">Day 4: Let's make some music !</a></li>
+		<li><a href="https://k-nel.github.io/actualclock.github.io/">Day 5: Time zone</a></li>
+		<li><a href="">Day 6: </a></li>
+		<li><a href="">Day 7: </a></li>
+		<li><a href="https://k-nel.github.io/day-eight.github.io/">Day 8: Transform Cheat Sheet</a></li>
+		<li><a href="https://k-nel.github.io/day-nine/">Day 9: Playground</a></li>
+		<li><a href="https://k-nel.github.io/day-ten.github.io/">Day 10: The maze</a></li>
 
 	</ul>
 	<footer>
